src/test/ui/mismatched_types/numeric-literal-cast.stderr
error[E0308]: mismatched types
  --> $DIR/numeric-literal-cast.rs:13:9
   |
LL |     foo(8u8);
   |         ^^^ expected u16, found u8
help: change the type of the numeric literal from `u8` to `u16`
   |
LL |     foo(8u16);
   |         ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
